[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyoganesson"
version = "0.1.0"
description = "Pure Python implementation of the Oganesson messaging framework"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
	{name = "Jon Yoder", email = "jon@yoder.cloud"},
]
keywords = ["oganesson","messaging"]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Developers",
	"Topic :: Communications"
]
dependencies = [
	"retval>=1.0.0",
	"PyNaCl>=1.3.0",
	'dnspython>=2.1.0',
	"pyeznacl>=1.0.0"
]
